--- a/package.json
+++ b/package.json
@@ -2,6 +2,9 @@
   "name": "app",
   "version": "0.1.0",
   "private": true,
+  "engines": {
+    "node": "16.x"
+  },
   "dependencies": {
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^11.2.7",
@@ -31,7 +34,7 @@
       "react-app",
       "react-app/jest"
     ]
-  },  
+  },
   "browserslist": {
     "production": [
       ">0.2%",
