--- a/package.json
+++ b/package.json
@@ -23,9 +23,12 @@
     "thunk": "^0.0.1",
     "web-vitals": "^1.1.2"
   },
+  "devDependencies": {
+    "cross-env": "^7.0.3"
+  },
   "scripts": {
     "start": "react-scripts start",
-    "build": "react-scripts build",
+    "build": "cross-env NODE_OPTIONS=--openssl-legacy-provider react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
